<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/detail_view_padding">

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="@dimen/detail_view_padding"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:clickable="true"
            android:layout_marginTop="@dimen/detail_view_padding"
            card_view:cardUseCompatPadding="true"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/detail_view_padding"
                android:orientation="vertical"
                android:layout_gravity="center">

                <LinearLayout
                    style="@style/DetailsLayoutStyle">
                    <TextView
                        android:id="@+id/stock_name_label"
                        style="@style/DetailsTextStyle"
                        android:text="@string/symbol_name_label"/>
                    <TextView
                        android:id="@+id/stock_name"
                        style="@style/DetailsTextStyle"
                        android:textAlignment="viewStart"
                        tools:text="Tesla"/>
                </LinearLayout>

                <LinearLayout
                    style="@style/DetailsLayoutStyle">
                    <TextView
                        android:id="@+id/stock_symbol_label"
                        style="@style/DetailsTextStyle"
                        android:text="@string/symbol_label"/>
                    <TextView
                        android:id="@+id/stock_symbol"
                        android:textAllCaps="true"
                        android:textDirection="locale"
                        style="@style/DetailsTextStyle"
                        tools:text="TSLA"/>
                </LinearLayout>

                <LinearLayout
                    style="@style/DetailsLayoutStyle">
                    <TextView
                        android:id="@+id/stock_currency_label"
                        style="@style/DetailsTextStyle"
                        android:text="@string/currency_label"/>
                    <TextView
                        android:id="@+id/stock_currency"
                        android:contentDescription="@string/a11y_currency_type"
                        android:textDirection="locale"
                        style="@style/DetailsTextStyle" />
                </LinearLayout>

                <LinearLayout
                    style="@style/DetailsLayoutStyle">
                    <TextView
                        android:id="@+id/stock_open_label"
                        style="@style/DetailsTextStyle"
                        android:text="@string/open_label"/>
                    <TextView
                        android:id="@+id/stock_open"
                        style="@style/DetailsTextStyle" />
                </LinearLayout>

                <LinearLayout
                    style="@style/DetailsLayoutStyle">
                    <TextView
                        android:id="@+id/stock_prev_close_label"
                        style="@style/DetailsTextStyle"
                        android:text="@string/prev_close_label"/>
                    <TextView
                        android:id="@+id/stock_prev_close"
                        style="@style/DetailsTextStyle" />
                </LinearLayout>

                <LinearLayout
                    style="@style/DetailsLayoutStyle">
                    <TextView
                        android:id="@+id/stock_day_high_label"
                        style="@style/DetailsTextStyle"
                        android:text="@string/day_high_label"/>
                    <TextView
                        android:id="@+id/stock_day_high"
                        style="@style/DetailsTextStyle" />
                </LinearLayout>

                <LinearLayout
                    style="@style/DetailsLayoutStyle">
                    <TextView
                        android:id="@+id/stock_day_low_label"
                        style="@style/DetailsTextStyle"
                        android:text="@string/day_low_label"/>
                    <TextView
                        android:id="@+id/stock_day_low"
                        style="@style/DetailsTextStyle" />
                </LinearLayout>

                <LinearLayout
                    style="@style/DetailsLayoutStyle">
                    <TextView
                        android:id="@+id/stock_year_high_label"
                        style="@style/DetailsTextStyle"
                        android:text="@string/year_high_label"/>
                    <TextView
                        android:id="@+id/stock_year_high"
                        style="@style/DetailsTextStyle" />
                </LinearLayout>

                <LinearLayout
                    style="@style/DetailsLayoutStyle">
                    <TextView
                        android:id="@+id/stock_year_low_label"
                        style="@style/DetailsTextStyle"
                        android:text="@string/year_low_label"/>
                    <TextView
                        android:id="@+id/stock_year_low"
                        style="@style/DetailsTextStyle"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>
</LinearLayout>

